# duneuro_forward_test

./: .gitignore  CMakeLists.txt  config.h.cmake  dune.module  duneuro_eeg_forward_test.pc.in  test_localized_subtraction.pc.in  test_localized_subtraction_eeg.pc.in
cmake/modules/: CMakeLists.txt
doc/doxygen/: Doxylocal
dune/: CMakeLists.txt
dune/duneuro_eeg_forward_test/: CMakeLists.txt  duneuro_eeg_forward_test.hh
dune/test_localized_subtraction/: CMakeLists.txt  test_localized_subtraction.hh
dune/test_localized_subtraction_eeg/: CMakeLists.txt
src/: CMakeLists.txt  duneuro_eeg_forward_test.cc  test_localized_subtraction_eeg.cc
src/input/sphere/: configs.ini  dipoles.txt
src/output/sphere/: README.txt
